# polymarket_agents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml
docs/: Gamma_LLM.md  Gamma_example.md  event_response_structure.md  market_response_structure.md  trading_logic.md
scripts/: install.sh  run-docker-dev.sh  start-dev.sh
src/polymarket_agents/application/: README.md  creator.py  executor.py  finder.py  trade.py
src/polymarket_agents/cli/: README.md  main.py
src/polymarket_agents/connectors/: README.md  chroma.py  search.py
src/polymarket_agents/polymarket/: data_api.py  gamma.py  polymarket.py
src/polymarket_agents/settings/: env.py
src/polymarket_agents/utils/: __init__.py  logging.py  objects.py  utils.py
tests/cli/: test_main.py
tests/settings/: test_env.py
