[project]
name = "polymarket-agents"
version = "0.1.0"
description = "AI agents and tooling for automated trading on Polymarket"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "Alex" },
]
dependencies = [
  "typer>=0.12",
  "devtools>=0.12",
  "python-dotenv>=1.0",
  "langchain>=0.2",
  "langchain-openai>=0.1",
  "langchain-community>=0.2",
  "langchain-chroma>=0.1",
  "langchainhub>=0.1",
  "langchain-text-splitters>=0.0.2",
  "langgraph>=0.1",
  "chromadb>=0.5",
  "openai>=1.40",
  "tiktoken>=0.7",
  "httpx>=0.27",
  "requests>=2.32",
  "pydantic>=2.8",
  "newsapi-python>=0.2",
  "tavily-python>=0.3",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "web3>=6.11",
  "py-clob-client>=0.17.5",
  "py-order-utils>=0.3",
  "rich>=13.7",
  "jq>=1.10.0",
  "langchain-google-genai>=3.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pre-commit>=3.8",
  "ruff>=0.5"
]

[project.scripts]
polymarket-agents = "polymarket_agents.cli.main:app"

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:websockets.legacy",
]
